[project]
name = "comfyui-random-image"
description = "LoadImage-like node with random / sequential / drag-drop file selection from a directory."
version = "0.3.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/bartenevve/comfyui-random-imageload-node"

[tool.comfy]
PublisherId = "bartenevve"
DisplayName = "Load Random Image"
Icon = ""
